criando hr-eureka-server
pom.xml
  Adicionando dependencias spring cloud, starter eureka-server e jaxb runtime.

HrEurekaServerApplication
  Anotação @EnableEurekaServer para habiltiar o servidor

application.properties(hr-eureka-server)
  Definindo nome e porta default do eureka server.
  Configurações para que o eureka server atue apenas como servidor
  e não consiga se registrar.

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,9 @@ hr-payroll/mvnw
 hr-payroll/mvnw.cmd
 hr-payroll/.idea
 
+hr-eureka-server/.mvn
+hr-eureka-server/mvnw
+hr-eureka-server/mvnw.cmd
+hr-eureka-server/.idea
+
 .idea
