--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8101
 
 spring.cloud.discovery.client.simple.instances.hr-worker[0].uri=http://localhost:8001
 spring.cloud.discovery.client.simple.instances.hr-worker[1].uri=http://localhost:8002
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
