timeout api_gateeway(5s) e circuit_breaker(4s)
hr-api-gateway
  - mapeamento das rotas de timeout de hr-payroll e hr-worker

hr-payroll
  - Expondo endpoint e criando service para simular timeout.
  - Configuração especifica no Spring Cloud Circuit Breakerpara fallback em casos de timeout
    https://reflectoring.io/time-limiting-with-springboot-resilience4j/
    https://github.com/resilience4j/resilience4j-spring-boot3-demo

hr-worker
  - exposição de endpoint para simular timeout

--- a/hr-api-gateway/src/main/resources/application.properties
+++ b/hr-api-gateway/src/main/resources/application.properties
@@ -2,19 +2,24 @@ spring.application.name=hr-api-gateway
 server.port=8765
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
-spring.cloud.gateway.default-filters[0]=StripPrefix=1
+eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
 
 spring.cloud.gateway.routes[0].id=hr-worker
 spring.cloud.gateway.routes[0].uri=lb://hr-worker
-spring.cloud.gateway.routes[0].predicates[0]=Path=/hr-worker/**
-# spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[0].predicates[0]=Path=\
+  /hr-worker/**,\
+  /api_gateway_timeout
 
 spring.cloud.gateway.routes[1].id=hr-payroll
 spring.cloud.gateway.routes[1].uri=lb://hr-payroll
-spring.cloud.gateway.routes[1].predicates[0]=Path=/hr-payroll/**
-spring.cloud.gateway.routes[1].predicates[1]=Path=/hr-payroll/payments/{worker_id}/days/{worked_days}
-# spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[1].predicates[0]=Path=\
+  /hr-payroll/**, \
+  /payments/{worker_id}/days/{worked_days}, \
+  /circuit_breaker_timeout
+
+spring.cloud.gateway.httpclient.response-timeout=5000
 
 management.endpoint.gateway.enabled=true
 management.endpoints.web.exposure.include=mappings,env,health,info,gateway
