--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=0
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
+
+resilience4j.timelimiter.instances.circuit-breaker-timeout.cancelRunningFuture=true
+resilience4j.timelimiter.instances.circuit-breaker-timeout.timeoutDuration=3s
