--- a/hr-api-gateway/src/main/resources/application.properties
+++ b/hr-api-gateway/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=hr-api-gateway
 server.port=8765
 
+# eureka client configs
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
+
+# spring cloud gateway configs
+spring.cloud.gateway.httpclient.response-timeout=5000
 
 spring.cloud.gateway.routes[0].id=hr-worker
 spring.cloud.gateway.routes[0].uri=lb://hr-worker
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 spring.cloud.gateway.routes[0].predicates[0]=Path=\
-  /hr-worker/**,\
-  /api_gateway_timeout
+  /hr-worker/**, \
+  /api_gateway_timeout, \
+  /remote_properties
 
 spring.cloud.gateway.routes[1].id=hr-payroll
 spring.cloud.gateway.routes[1].uri=lb://hr-payroll
@@ -19,7 +24,6 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=\
   /payments/{worker_id}/days/{worked_days}, \
   /circuit_breaker_timeout
 
-spring.cloud.gateway.httpclient.response-timeout=5000
-
+# actuator configs
 management.endpoint.gateway.enabled=true
 management.endpoints.web.exposure.include=mappings,env,health,info,gateway
