--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,14 +1,2 @@
 spring.application.name=hr-worker
-server.port=0
-
-# Database configuration
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
+spring.config.import=optional:configserver:
