actuator refresh hr-worker @RefreshScope
application.properties(hr-apigateway)
  - simplificando mapeamento da rota /hr-woker/**
  - a rota /hr-payroll/** foi mantida da forma que esta
    para que fique a nível de exemplo

application.properties(hr-worker)
  - adicionando as configuraçoes novamente para que nao seja
    preciso iniciar o hr-config-server sempre que qusier
    iniciar o hr-worker
  - expondo endpoints do actuator
  - endpoint refresh é capaz de atualizar propriedades em runtime

RemotePropertiesEndpoint
  - anotação @RefreshScope para que as propriedades lidas do github
    sejam atualizadas em runtime quando /actuator/refresh for chamado

--- a/hr-api-gateway/src/main/resources/application.properties
+++ b/hr-api-gateway/src/main/resources/application.properties
@@ -11,10 +11,7 @@ spring.cloud.gateway.httpclient.response-timeout=5000
 spring.cloud.gateway.routes[0].id=hr-worker
 spring.cloud.gateway.routes[0].uri=lb://hr-worker
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-spring.cloud.gateway.routes[0].predicates[0]=Path=\
-  /hr-worker/**, \
-  /api_gateway_timeout, \
-  /remote_properties
+spring.cloud.gateway.routes[0].predicates[0]=Path=/hr-worker/**
 
 spring.cloud.gateway.routes[1].id=hr-payroll
 spring.cloud.gateway.routes[1].uri=lb://hr-payroll
@@ -26,4 +23,8 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=\
 
 # actuator configs
 management.endpoint.gateway.enabled=true
-management.endpoints.web.exposure.include=mappings,env,health,info,gateway
+management.endpoint.health.enabled=true
+management.endpoint.metrics.enabled=true
+
+management.endpoints.enabled-by-default=false
+management.endpoints.web.exposure.include=gateway, health, metrics
