ajuste build&PR

--- a/.github/workflows/00-feat-pull-request.yaml
+++ b/.github/workflows/00-feat-pull-request.yaml
@@ -2,8 +2,8 @@ name: Open PR to main
 on:
   push:
     branches:
-      - feature/**
-      - feat/**
+      - feature**
+      - feat**
 
 jobs:
   create-pull-request:
