--- a/.github/workflows/01-build-artifacts.yaml
+++ b/.github/workflows/01-build-artifacts.yaml
@@ -33,6 +33,7 @@ jobs:
           
           mvn clean install \
           --threads 2C \
+          --batch-mode \
           --file pom.xml
 
       - name: Build hr-payroll
@@ -45,4 +46,5 @@ jobs:
           
           mvn clean install \
           --threads 2C \
+          --batch-mode \
           --file pom.xml          
