--- a/hr-user/pom.xml
+++ b/hr-user/pom.xml
@@ -19,6 +19,8 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
+
+        <lombok.version>1.18.26</lombok.version>
     </properties>
 
 	<dependencyManagement>
@@ -47,6 +49,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
