config hr-user route no hr-api-gateway

--- a/hr-api-gateway/src/main/resources/application.properties
+++ b/hr-api-gateway/src/main/resources/application.properties
@@ -17,9 +17,14 @@ spring.cloud.gateway.routes[1].id=hr-payroll
 spring.cloud.gateway.routes[1].uri=lb://hr-payroll
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 spring.cloud.gateway.routes[1].predicates[0]=Path=\
-  /hr-payroll/**, \
-  /payments/{worker_id}/days/{worked_days}, \
-  /circuit_breaker_timeout
+    /hr-payroll/**, \
+    /payments/{worker_id}/days/{worked_days}, \
+    /circuit_breaker_timeout
+
+spring.cloud.gateway.routes[2].id=hr-user
+spring.cloud.gateway.routes[2].uri=lb://hr-user
+spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[2].predicates[0]=Path=/hr-user/**
 
 # actuator configs
 management.endpoint.gateway.enabled=true
