--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=hr-oauth
+server.port=0
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
