--- a/hr-api-gateway/src/main/resources/application.properties
+++ b/hr-api-gateway/src/main/resources/application.properties
@@ -26,6 +26,11 @@ spring.cloud.gateway.routes[2].uri=lb://hr-user
 spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
 spring.cloud.gateway.routes[2].predicates[0]=Path=/hr-user/**
 
+spring.cloud.gateway.routes[3].id=hr-oauth
+spring.cloud.gateway.routes[3].uri=lb://hr-oauth
+spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[3].predicates[0]=Path=/hr-oauth/**
+
 # actuator configs
 management.endpoint.gateway.enabled=true
 management.endpoint.health.enabled=true
