--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=hr-oauth
-server.port=0
+server.port=7676
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
+
+# logging.level.root=TRACE
+logging.level.org.springframework.web=TRACE
+# logging.level.org.springframework.security=TRACE
+# logging.level.org.springframework.security.oauth2=TRACE
