--- a/hr-api-gateway/src/main/resources/application.properties
+++ b/hr-api-gateway/src/main/resources/application.properties
@@ -1,37 +1,32 @@
 spring.application.name=hr-api-gateway
 server.port=8765
 
-# eureka client configs
+###
+### eureka client configs
+###
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}}
 
-# spring cloud gateway configs
+###
+### spring cloud gateway configs
+###
 spring.cloud.gateway.httpclient.response-timeout=5000
 
-spring.cloud.gateway.routes[0].id=hr-worker
-spring.cloud.gateway.routes[0].uri=lb://hr-worker
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-spring.cloud.gateway.routes[0].predicates[0]=Path=/hr-worker/**
+###
+### Exemplo configuração de rota via properties
+### é uma alternativa as definições vistas na classe Routes.java
+###
+# spring.cloud.gateway.routes[0].id=hr-payroll
+# spring.cloud.gateway.routes[0].uri=lb://hr-payroll
+# spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+# spring.cloud.gateway.routes[0].predicates[0]=Path=\
+#    /hr-payroll/**, \
+#    /payments/{worker_id}/days/{worked_days}, \
+#    /circuit_breaker_timeout
 
-spring.cloud.gateway.routes[1].id=hr-payroll
-spring.cloud.gateway.routes[1].uri=lb://hr-payroll
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
-spring.cloud.gateway.routes[1].predicates[0]=Path=\
-    /hr-payroll/**, \
-    /payments/{worker_id}/days/{worked_days}, \
-    /circuit_breaker_timeout
-
-spring.cloud.gateway.routes[2].id=hr-user
-spring.cloud.gateway.routes[2].uri=lb://hr-user
-spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
-spring.cloud.gateway.routes[2].predicates[0]=Path=/hr-user/**
-
-spring.cloud.gateway.routes[3].id=hr-oauth
-spring.cloud.gateway.routes[3].uri=lb://hr-oauth
-spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
-spring.cloud.gateway.routes[3].predicates[0]=Path=/hr-oauth/**
-
-# actuator configs
+###
+### actuator config
+###
 management.endpoint.gateway.enabled=true
 management.endpoint.health.enabled=true
 management.endpoint.metrics.enabled=true
